infra/kubernetes/apps/plausible/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plausible
  namespace: plausible
  labels:
    app.kubernetes.io/name: plausible
    app.kubernetes.io/component: analytics
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: plausible
    app.kubernetes.io/component: analytics
---
apiVersion: v1
kind: Service
metadata:
  name: plausible-db
  namespace: plausible
  labels:
    app.kubernetes.io/name: plausible-db
    app.kubernetes.io/component: analytics
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: postgres
      protocol: TCP
      name: postgres
  selector:
    app.kubernetes.io/name: plausible-db
    app.kubernetes.io/component: analytics
---
apiVersion: v1
kind: Service
metadata:
  name: plausible-events-db
  namespace: plausible
  labels:
    app.kubernetes.io/name: plausible-events-db
    app.kubernetes.io/component: analytics
spec:
  type: ClusterIP
  ports:
    - port: 8123
      targetPort: http
      protocol: TCP
      name: http
    - port: 9000
      targetPort: native
      protocol: TCP
      name: native
  selector:
    app.kubernetes.io/name: plausible-events-db
    app.kubernetes.io/component: analytics
